# TradeOps

IBKR-DEMO/: .env.example  pyproject.toml  verify_ibkr.py
PolymarketBot/: .env.example  .firebaserc  .gitignore  README.md  firebase.json  firestore.rules  pyproject.toml
PolymarketBot/.claude/: settings.local.json
PolymarketBot/functions/: .env.example  package-lock.json  package.json  tsconfig.json
PolymarketBot/functions/src/: client.ts  firebaseWriter.ts  index.ts  marketData.ts  runner.ts
PolymarketBot/functions/src/strategies/: fairValue.ts  kellySize.ts  marketMaking.ts  snapshot.ts  strategy.ts  types.ts
PolymarketBot/src/polymarket_bot/: __init__.py  __main__.py  client.py  firebase_writer.py  main.py  market_data.py  runner.py
PolymarketBot/src/polymarket_bot/strategies/: __init__.py  base.py  fair_value.py  market_making.py  snapshot.py
PolymarketBot/webapp/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
PolymarketBot/webapp/src/: App.jsx  App.tsx  firebase.ts  index.css  main.tsx
PolymarketBot/webapp/src/components/: AuthGate.tsx  CenterPane.tsx  LeftRail.tsx  RightRail.tsx  RunsTable.jsx  RunsTable.tsx  StatsPanel.jsx  StatsPanel.tsx  TopBar.tsx  TriggerPanel.jsx  TriggerPanel.tsx
SETScanner/: .env.example  .gitignore  .mcp.json  README.md  config.py  main.py  pyproject.toml  test_integration.py
SETScanner/.claude/: settings.local.json
SETScanner/.claude/agents/: set-analyst.md
SETScanner/docs/: set-mcp-integration.md
SETScanner/tests/: test_invx_integration.py  test_pi_integration.py  test_set_mcp_integration.py
Tradingview-Integration/: README.md
Tradingview-Integration/scripts/: launch-tradingview.ps1  stop-tradingview.ps1
XAU-NT-Wrangler/: .gitignore  README.md  backtest.py  backtest_gc.py  requirements.txt
XAU-NT-Wrangler/docs/: dukascopy-data-issues.md  (+2 more)
data-analytic-TV/: .env.example  .mcp.json  README.md
kapo-prototype/: .env.example  .gitignore  README.md  arb_engine.py  config.py  kalshi_client.py  web3_executor.py
kapo-prototype/KalshiArb/: .gitignore  matcher.py  pyproject.toml
(+6 files in other folders)
