[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Polymarket trading bot skeleton"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client>=0.19.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "firebase-admin>=6.5.0",
]

[project.scripts]
polymarket-bot    = "polymarket_bot.__main__:main"
polymarket-runner = "polymarket_bot.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_bot"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
