[project]
name = "kalshi-arb"
version = "0.1.0"
description = "Cross-exchange arbitrage scanner: Kalshi <-> Polymarket (paper trading, Polygon Amoy testnet)"
requires-python = ">=3.10"
dependencies = [
    "web3>=7.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rapidfuzz>=3.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
]
